--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -78,6 +78,67 @@ Browser Upgrade Prompt
     margin-top: 33%;
 }
 
+.doge {
+    background: url("../images/Doge-head.png") repeat;
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+    background-size: contain;    
+}
+
+.circle {
+    text-align: center;    
+    border-radius: 50%;
+    display: flex;
+    display: -webkit-flex;
+    align-items: center;
+}
+.circle-small {
+    width: 100px;
+    height: 100px;    
+}
+.circle-xsmall {
+    width: 30px;
+    height: 30px;    
+}
+.circle-xsmall:hover {
+    color: white;
+}
+.circle-medium {
+    width: 300px;
+    height: 300px;    
+}
+.circle-black {
+    background-color: black;
+    border-color: black;
+    color: white;
+    border: 1px solid transparent;
+}
+.circle-green {
+    background-color: #3CFF3C;
+    border-color: green;
+    color: white;
+    border: 1px solid transparent;
+}
+.circle-green:hover {
+    background-color: rgb(39, 166, 39);
+    color: white;
+}
+.circle-pink {
+    background-color: #DA61BC;
+    border-color: pink;
+    color: white;
+    border: 1px solid transparent;
+}
+.circle-pink:hover {
+    background-color: #FF778E;
+    color: white;
+}
+
+.navbar {
+    font-size: x-large;
+}
+
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
